--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
   <div class="container">
     <div class="news">
+ 
 
-    </div>
-    <button class="btn">Показать новости </button>
-  </div>
+
+  <div class="cars">
+   
   <script src="js/app.js"></script>
 </body>
 </html>
